# gRPC-server

./: .env  .gitignore  Cargo.toml  build.rs  docker-compose.yml
.docker/: Dockerfile.server
migrations/: 0001_create_user_table.sql  0002_create_bank_account_table.sql  0003_create_transactions_table.sql
proto/: finance_control.proto
src/: main.rs  tracing.rs
src/handlers/: admin.rs  finance_control.rs  mod.rs
src/layers/: authorization.rs
src/models/: bank_account.rs  mod.rs  transaction.rs  user.rs
